# nycquery-rs

./: .gitignore  Cargo.toml
docs/: architecture.md  examples.txt  notes.txt  ollama.md
src/: main.rs
