[package]
name = "nycquery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nycquery"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
scraper = "0.27"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
